comments add, delete works

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "python.analysis.typeCheckingMode": "off",
     "cSpell.words": [
-        "getall"
+        "getall",
+        "pinia"
     ]
 }
